--- a/app/src/main/res/layout/activity_main_duyetnhap.xml
+++ b/app/src/main/res/layout/activity_main_duyetnhap.xml
@@ -21,7 +21,7 @@
             android:text="Tạo đơn xuất hàng"
             android:textAlignment="center"
             android:textColor="#fff"
-            android:textSize="18sp"
+            android:textSize="@dimen/bon"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="0dp" />
 
@@ -29,10 +29,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingBottom="5dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:paddingTop="5dp"
+            android:paddingTop="3dp"
             android:weightSum="12">
 
             <LinearLayout
@@ -48,7 +47,8 @@
                     android:layout_weight="0"
                     android:drawableLeft="@android:drawable/ic_menu_my_calendar"
                     android:gravity="center_vertical"
-                    android:text="Ngày:" />
+                    android:text="Ngày:"
+                    android:textSize="@dimen/muoi" />
 
                 <TextView
                     android:id="@+id/tvInfoDate"
@@ -56,7 +56,8 @@
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
                     android:paddingLeft="5dp"
-                    android:text="TextView" />
+                    android:text="TextView"
+                    android:textSize="@dimen/muoi" />
             </LinearLayout>
 
             <LinearLayout
@@ -70,7 +71,8 @@
                     android:layout_height="wrap_content"
                     android:drawableLeft="@android:drawable/ic_menu_recent_history"
                     android:gravity="center_vertical"
-                    android:text="Giờ:" />
+                    android:text="Giờ:"
+                    android:textSize="@dimen/muoi" />
 
                 <TextView
                     android:id="@+id/tvInfoTime"
@@ -78,7 +80,8 @@
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
                     android:paddingLeft="5dp"
-                    android:text="TextView" />
+                    android:text="TextView"
+                    android:textSize="@dimen/muoi" />
             </LinearLayout>
         </LinearLayout>
 
@@ -93,8 +96,8 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                android:paddingTop="10dp"
-                android:text="Nhân viên xuất:" />
+                android:text="Nhân viên xuất:"
+                android:textSize="@dimen/muoi" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -112,8 +115,8 @@
                     android:gravity="center_horizontal">
 
                     <ImageView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
                         app:srcCompat="@drawable/ic_userxuat"
                         tools:ignore="VectorDrawableCompat" />
                 </LinearLayout>
@@ -136,9 +139,10 @@
                             android:id="@+id/tvInfomaNV"
                             android:layout_width="299dp"
                             android:layout_height="wrap_content"
+                            android:scrollbarSize="@dimen/muoi"
                             android:text="Mã số: 000000000"
                             android:textColor="#000"
-                            android:textSize="14sp"
+                            android:textSize="@dimen/bon"
                             android:textStyle="italic" />
 
                     </LinearLayout>
@@ -153,9 +157,10 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:scrollbarSize="@dimen/muoi"
                             android:text="Tên nhân viên: Trần thị thanh thuỳ"
                             android:textColor="#000"
-                            android:textSize="14sp"
+                            android:textSize="@dimen/bon"
                             android:textStyle="italic" />
                     </LinearLayout>
 
@@ -181,7 +186,8 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Chi nhánh:" />
+                        android:text="Chi nhánh:"
+                        android:textSize="@dimen/muoi" />
                 </LinearLayout>
 
 
@@ -203,7 +209,7 @@
                         android:text="Chi nhánh SOL"
                         android:textAlignment="inherit"
                         android:textColor="#000"
-                        android:textSize="16sp" />
+                        android:textSize="@dimen/muoi" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -211,7 +217,10 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_margin="10dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp"
                 android:background="@color/cam" />
 
             <TextView
@@ -220,7 +229,8 @@
                 android:paddingBottom="5dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                android:text="Nhân viên nhận:" />
+                android:text="Nhân viên nhận:"
+                android:textSize="@dimen/muoi" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -239,8 +249,8 @@
 
                     <ImageView
                         android:id="@+id/ivDoinv"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
                         app:srcCompat="@drawable/ic_usernhan"
                         tools:ignore="VectorDrawableCompat" />
                 </LinearLayout>
@@ -267,7 +277,7 @@
                             android:layout_height="wrap_content"
                             android:text="Mã số: 000000000"
                             android:textColor="#000"
-                            android:textSize="14sp"
+                            android:textSize="@dimen/muoi"
                             android:textStyle="italic" />
 
                     </LinearLayout>
@@ -284,7 +294,7 @@
                             android:layout_weight="1"
                             android:text="Tên nhân viên: Trần thị thanh thuỳ"
                             android:textColor="#000"
-                            android:textSize="14sp"
+                            android:textSize="@dimen/muoi"
                             android:textStyle="italic" />
                     </LinearLayout>
 
@@ -311,7 +321,8 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Chi nhánh:" />
+                        android:text="Chi nhánh:"
+                        android:textSize="@dimen/muoi" />
                 </LinearLayout>
 
 
@@ -333,7 +344,7 @@
                         android:text="Chi nhánh SOL"
                         android:textAlignment="inherit"
                         android:textColor="#000"
-                        android:textSize="16sp" />
+                        android:textSize="@dimen/muoi" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -341,7 +352,10 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_margin="10dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp"
                 android:background="@color/cam" />
 
 
@@ -381,7 +395,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
                         android:padding="5dp"
-                        android:textSize="18sp" />
+                        android:textSize="@dimen/tam" />
 
                 </LinearLayout>
 
@@ -403,7 +417,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_weight="1"
-                android:text="Lọc danh sách:" />
+                android:text="Lọc danh sách:"
+                android:textSize="@dimen/muoi" />
 
             <TextView
                 android:id="@+id/tvtatca"
@@ -412,7 +427,8 @@
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
                 android:text="Tất cả"
-                android:textColor="@color/holo_xanh" />
+                android:textColor="@color/holo_xanh"
+                android:textSize="@dimen/muoi" />
 
             <TextView
                 android:id="@+id/tvdanhan"
@@ -421,7 +437,8 @@
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
                 android:text="Đã nhận"
-                android:textColor="@color/xanh_la" />
+                android:textColor="@color/xanh_la"
+                android:textSize="@dimen/muoi" />
 
             <TextView
                 android:id="@+id/tvchuanhan"
@@ -430,7 +447,33 @@
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
                 android:text="Chưa nhận"
-                android:textColor="@color/RED" />
+                android:textColor="@color/RED"
+                android:textSize="@dimen/muoi" />
+
+            <TextView
+                android:id="@+id/fabAn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/cam"
+                android:drawableEnd="@android:drawable/arrow_up_float"
+                android:padding="3dp"
+                android:text="Mở rộng"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="@dimen/muoi" />
+
+            <TextView
+                android:id="@+id/fabHien"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/cam"
+                android:drawableEnd="@android:drawable/arrow_down_float"
+                android:padding="3dp"
+                android:text="Thu gọn"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="@dimen/muoi"
+                android:visibility="gone" />
         </LinearLayout>
 
         <ListView
@@ -444,29 +487,13 @@
             tools:layout_editor_absoluteX="19dp" />
     </LinearLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabHien"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
-        app:backgroundTint="@android:color/holo_red_light"
-        app:srcCompat="@drawable/ic_zoomout" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabAn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
-        android:src="@drawable/ic_zoomin"
-        app:backgroundTint="@android:color/holo_red_light"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabSubmit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|left"
+        android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
         android:src="@drawable/ic_upload"
         app:backgroundTint="@android:color/holo_red_light" />
