--- a/app/src/main/res/layout/activity_main_report_bh.xml
+++ b/app/src/main/res/layout/activity_main_report_bh.xml
@@ -53,7 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|left"
-        android:layout_margin="@dimen/fab_margin"
+        android:layout_margin="@dimen/btn"
         android:src="@drawable/icon_barcode"
         app:backgroundTint="@android:color/holo_orange_light" />
 
