--- a/app/src/main/res/layout/adapter_sales.xml
+++ b/app/src/main/res/layout/adapter_sales.xml
@@ -22,9 +22,9 @@
             android:background="@color/white"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingBottom="3dp"
+            android:paddingBottom="2dp"
             android:paddingLeft="5dp"
-            android:paddingTop="5dp"
+            android:paddingTop="2dp"
             android:weightSum="10">
 
             <ImageView
@@ -42,7 +42,7 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="20dp"
                 android:textAppearance="?android:textAppearanceLarge"
-                android:textSize="14sp"
+                android:textSize="@dimen/hai"
                 tools:text="TextView" />
         </LinearLayout>
 
@@ -58,33 +58,31 @@
                 android:id="@+id/tvAdapterSalesMa"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="5dp"
                 android:layout_weight="1"
                 android:paddingLeft="5dp"
                 android:textAppearance="?android:textAppearanceMedium"
-                android:textSize="12sp"
+                android:textSize="@dimen/muoi"
                 tools:text="TextView" />
 
             <TextView
                 android:id="@+id/tvAdapterSalesBaohanh"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:textAppearance="?android:textAppearanceMedium"
-                android:textSize="12sp"
+                android:textSize="@dimen/muoi"
                 tools:text="TextView" />
 
             <TextView
                 android:id="@+id/tvAdapterSalesNguon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:textAlignment="textEnd"
                 android:textAppearance="?android:textAppearanceMedium"
-                android:textSize="12sp"
+                android:textSize="@dimen/muoi"
                 tools:text="TextView" />
         </LinearLayout>
 
@@ -106,7 +104,7 @@
                 android:paddingLeft="10dp"
                 android:textAppearance="?android:textAppearanceMedium"
                 android:textColor="@android:color/holo_red_dark"
-                android:textSize="12sp"
+                android:textSize="@dimen/hai"
                 android:textStyle="bold" />
 
             <TextView
@@ -120,7 +118,7 @@
                 android:textAlignment="textEnd"
                 android:textAppearance="?android:textAppearanceMedium"
                 android:textColor="@android:color/holo_red_dark"
-                android:textSize="12sp"
+                android:textSize="@dimen/hai"
                 android:textStyle="bold"
                 tools:text="TextView" />
         </LinearLayout>
