--- a/app/src/main/res/layout/adapter_xem.xml
+++ b/app/src/main/res/layout/adapter_xem.xml
@@ -25,7 +25,7 @@
             <ImageView
                 android:id="@+id/ivSalesDelete"
                 android:layout_width="match_parent"
-                android:layout_height="52dp"
+                android:layout_height="40dp"
                 app:srcCompat="@drawable/icon_delete" />
         </LinearLayout>
 
@@ -58,7 +58,7 @@
                     android:paddingLeft="5dp"
                     android:paddingRight="20dp"
                     android:textAppearance="?android:textAppearanceLarge"
-                    android:textSize="14sp"
+                    android:textSize="@dimen/hai"
                     tools:text="TextView" />
             </LinearLayout>
 
@@ -74,33 +74,31 @@
                     android:id="@+id/tvAdapterSalesMa"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
                     android:paddingLeft="5dp"
                     android:textAppearance="?android:textAppearanceMedium"
-                    android:textSize="12sp"
+                    android:textSize="@dimen/muoi"
                     tools:text="TextView" />
 
                 <TextView
                     android:id="@+id/tvAdapterSalesBaohanh"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:textAppearance="?android:textAppearanceMedium"
-                    android:textSize="12sp"
+                    android:textSize="@dimen/muoi"
                     tools:text="TextView" />
 
                 <TextView
                     android:id="@+id/tvAdapterSalesNguon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
+                    android:layout_marginRight="5dp"
                     android:layout_weight="1"
                     android:textAlignment="textEnd"
                     android:textAppearance="?android:textAppearanceMedium"
-                    android:textSize="12sp"
+                    android:textSize="@dimen/muoi"
                     tools:text="TextView" />
             </LinearLayout>
 
@@ -125,7 +123,7 @@
             android:paddingLeft="10dp"
             android:textAppearance="?android:textAppearanceMedium"
             android:textColor="@android:color/holo_red_dark"
-            android:textSize="12sp"
+            android:textSize="@dimen/hai"
             android:textStyle="bold" />
 
         <TextView
@@ -139,7 +137,7 @@
             android:textAlignment="textEnd"
             android:textAppearance="?android:textAppearanceMedium"
             android:textColor="@android:color/holo_red_dark"
-            android:textSize="12sp"
+            android:textSize="@dimen/hai"
             android:textStyle="bold"
             tools:text="TextView" />
     </LinearLayout>
