--- a/app/src/main/res/layout/dialog_spinner.xml
+++ b/app/src/main/res/layout/dialog_spinner.xml
@@ -7,5 +7,7 @@
         android:id="@+id/spinnerKM"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp" />
+        android:layout_margin="20dp"
+        android:background="@drawable/bg125"
+        android:padding="10dp" />
 </LinearLayout>
