--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,7 +64,7 @@
                 android:gravity="center"
                 android:padding="10dp"
                 android:textColor="@color/white_greyish"
-                android:textSize="18sp"
+                android:textSize="@dimen/tam"
                 android:textStyle="bold" />
 
             <EditText
@@ -86,7 +86,7 @@
                 android:textColor="@android:color/darker_gray"
                 android:textColorHint="@android:color/darker_gray"
                 android:textColorLink="@android:color/darker_gray"
-                android:textSize="14sp" />
+                android:textSize="@dimen/sau" />
 
             <View
                 android:layout_width="fill_parent"
@@ -111,7 +111,7 @@
                 android:textColor="@android:color/darker_gray"
                 android:textColorHint="@android:color/darker_gray"
                 android:textColorLink="@android:color/darker_gray"
-                android:textSize="14sp"
+                android:textSize="@dimen/sau"
                 android:textStyle="italic" />
 
             <LinearLayout
@@ -129,7 +129,7 @@
                     android:layout_weight="1"
                     android:text="@string/show_pwd"
                     android:textColorHint="@color/RED"
-                    android:textSize="12sp" />
+                    android:textSize="@dimen/hai" />
 
                 <CheckBox
                     android:id="@+id/cbShowpass"
@@ -138,7 +138,7 @@
                     android:layout_weight="1"
                     android:text="@string/showpass"
                     android:textColorHint="@color/RED"
-                    android:textSize="12sp" />
+                    android:textSize="@dimen/hai" />
 
             </LinearLayout>
 
@@ -159,7 +159,7 @@
                     android:paddingRight="30dp"
                     android:text="@string/login"
                     android:textColor="@color/white"
-                    android:textSize="17sp"
+                    android:textSize="@dimen/sau"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -173,7 +173,7 @@
                 android:padding="5dp"
                 android:text="Hỗ trợ kỹ thuật - 01675322273"
                 android:textColor="@color/white"
-                android:textSize="15sp"
+                android:textSize="@dimen/bon"
                 android:textStyle="italic" />
 
         </LinearLayout>
