--- a/app/src/main/res/layout/activity_main_information_order.xml
+++ b/app/src/main/res/layout/activity_main_information_order.xml
@@ -10,6 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <TextView
@@ -19,7 +20,7 @@
             android:padding="10dp"
             android:text="Chi tiết đơn hàng:"
             android:textColor="#fff"
-            android:textSize="12sp" />
+            android:textSize="@dimen/hai" />
 
         <TextView
             android:id="@+id/tvifMaOrder"
@@ -29,7 +30,7 @@
             android:gravity="center_vertical"
             android:text="02031929"
             android:textColor="@color/white"
-            android:textSize="12sp"
+            android:textSize="@dimen/hai"
             android:textStyle="bold|italic" />
 
     </LinearLayout>
@@ -38,79 +39,175 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="10dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tvifDateOrder"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:drawableStart="@android:drawable/ic_menu_my_calendar"
-                android:gravity="center_vertical"
-                android:text="20/10/2017" />
-
-            <TextView
-                android:id="@+id/tvifTimeOrder"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:drawableStart="@android:drawable/ic_lock_idle_alarm"
-                android:gravity="center_vertical"
-                android:text="  ca sáng" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/tvifChinhanhOrder"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:drawableStart="@drawable/ic_action_name"
-            android:gravity="center_vertical"
-            android:text="Chi nhánh:"
-            android:textStyle="bold" />
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingTop="10dp">
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:padding="5dp"
-                app:srcCompat="@drawable/icon_user" />
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="3dp"
+            android:weightSum="12">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_weight="7"
+                android:orientation="horizontal"
+                android:weightSum="10">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:drawableLeft="@android:drawable/ic_menu_my_calendar"
+                    android:gravity="center_vertical"
+                    android:text="Ngày:"
+                    android:textSize="@dimen/muoi" />
+
+                <TextView
+                    android:id="@+id/tvifDateOrder"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="5dp"
+                    android:text="TextView"
+                    android:textSize="@dimen/muoi" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@android:drawable/ic_menu_recent_history"
+                    android:gravity="center_vertical"
+                    android:text="Giờ:"
+                    android:textSize="@dimen/muoi" />
+
+                <TextView
+                    android:id="@+id/tvifTimeOrder"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="5dp"
+                    android:text="TextView"
+                    android:textSize="@dimen/muoi" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="10">
+
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:gravity="center_horizontal">
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    app:srcCompat="@drawable/ic_userxuat"
+                    tools:ignore="VectorDrawableCompat" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="7"
+                android:background="@drawable/bg125"
+                android:gravity="center"
                 android:orientation="vertical"
-                android:paddingLeft="10dp"
-                android:weightSum="2">
+                android:paddingLeft="10dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tvifMaNVOrder"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Mã số: 000000000"
+                        android:textColor="#000"
+                        android:textSize="@dimen/muoi"
+                        android:textStyle="italic" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tvifTenNVOrder"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Tên nhân viên: Trần thị thanh thuỳ"
+                        android:textColor="#000"
+                        android:textSize="@dimen/muoi"
+                        android:textStyle="italic" />
+                </LinearLayout>
+
+            </LinearLayout>
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="10">
+
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:gravity="center_horizontal|center">
 
                 <TextView
-                    android:id="@+id/tvifMaNVOrder"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:text="NVBH0294943"
-                    android:textSize="14sp"
-                    android:textStyle="italic" />
+                    android:layout_height="wrap_content"
+                    android:text="Chi nhánh:"
+                    android:textSize="@dimen/muoi" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="7"
+                android:background="@drawable/bg125"
+                android:gravity="center_vertical|center_horizontal"
+                android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/tvifTenNVOrder"
+                    android:id="@+id/tvifChinhanhOrder"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:text="Trần thị thanh thùy"
-                    android:textSize="14sp" />
+                    android:layout_height="match_parent"
+                    android:paddingBottom="5dp"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="5dp"
+                    android:text="Chi nhánh SOL"
+                    android:textAlignment="inherit"
+                    android:textColor="#000"
+                    android:textSize="@dimen/muoi" />
 
             </LinearLayout>
         </LinearLayout>
@@ -118,46 +215,76 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
             android:background="@color/cam" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Khách hàng:"
+            android:textSize="@dimen/muoi" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:weightSum="1">
+            android:weightSum="10">
 
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="49dp"
-                app:srcCompat="@drawable/icon_listsanpham" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:gravity="center_horizontal">
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    app:srcCompat="@drawable/ic_kha"
+                    tools:ignore="VectorDrawableCompat" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_weight="7"
+                android:background="@drawable/bg125"
+                android:gravity="center"
                 android:orientation="vertical"
-                android:paddingLeft="10dp"
-                android:weightSum="2">
+                android:paddingLeft="10dp">
 
-                <TextView
-                    android:id="@+id/tvifTenKH"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:text="Trần văn C"
-                    android:textSize="14sp" />
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/tvifSdtKH"
+                    <TextView
+                        android:id="@+id/tvifTenKH"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Mã số: 000000000"
+                        android:textColor="#000"
+                        android:textSize="@dimen/muoi"
+                        android:textStyle="italic" />
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:text="0909090222"
-                    android:textSize="14sp" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tvifSdtKH"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Tên nhân viên: Trần thị thanh thuỳ"
+                        android:textColor="#000"
+                        android:textSize="@dimen/muoi"
+                        android:textStyle="italic" />
+                </LinearLayout>
 
             </LinearLayout>
         </LinearLayout>
@@ -165,11 +292,12 @@
         <TextView
             android:id="@+id/tvifGhichuKH"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:background="@color/white"
             android:padding="5dp"
             android:paddingTop="5dp"
             android:text="k có"
+            android:textSize="@dimen/hai"
             android:textStyle="italic" />
 
         <TextView
@@ -178,7 +306,26 @@
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp" />
+
+        <TextView
+            android:id="@+id/tvifGhichuOrder"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginBottom="5dp"
+            android:background="@color/white"
+            android:padding="5dp"
+            android:text="không có"
+            android:textSize="@dimen/hai"
+            android:textStyle="italic" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="10dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -193,7 +340,7 @@
                 android:layout_weight="1"
                 android:text="80.00đ"
                 android:textColor="@android:color/holo_red_light"
-                android:textSize="14sp" />
+                android:textSize="@dimen/bon" />
 
             <TextView
                 android:id="@+id/tvifTotalOrder"
@@ -203,18 +350,9 @@
                 android:text="120000đ"
                 android:textAlignment="textEnd"
                 android:textColor="@android:color/holo_red_light"
-                android:textSize="16sp"
+                android:textSize="@dimen/bon"
                 android:textStyle="bold" />
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/tvifGhichuOrder"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:padding="5dp"
-            android:text="không có"
-            android:textStyle="italic" />
 
     </LinearLayout>
 
