--- a/app/src/main/res/layout/activity_main_ketqua_kiemkho.xml
+++ b/app/src/main/res/layout/activity_main_ketqua_kiemkho.xml
@@ -20,7 +20,7 @@
             android:text="Đối chiếu kho"
             android:textAlignment="center"
             android:textColor="#fff"
-            android:textSize="18sp" />
+            android:textSize="@dimen/bon" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -33,7 +33,7 @@
                 android:padding="10dp"
                 android:text="Chọn hai nhân viên đã kiểm kho để Đối chiếu kết quả"
                 android:textAlignment="center"
-                android:textSize="12sp"
+                android:textSize="@dimen/muoi"
                 tools:text="Chọn 2 nhân viên đã kiểm kho để đối chiếu" />
 
             <LinearLayout
@@ -49,7 +49,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:background="@drawable/bg125"
+                    android:padding="5dp" />
 
                 <Spinner
                     android:id="@+id/snKQKKB"
@@ -58,7 +60,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:alwaysDrawnWithCache="false"
+                    android:background="@drawable/bg125"
+                    android:padding="5dp" />
             </LinearLayout>
 
             <LinearLayout
@@ -85,7 +90,7 @@
                         android:background="@android:color/holo_orange_light"
                         android:text="Đối chiếu"
                         android:textColor="#fff"
-                        android:textSize="12sp" />
+                        android:textSize="@dimen/btn" />
 
                 </LinearLayout>
 
@@ -124,7 +129,7 @@
                         android:text="Xem chi tiết"
                         android:textAlignment="center"
                         android:textColor="@color/white"
-                        android:textSize="12sp" />
+                        android:textSize="@dimen/hai" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -143,7 +148,7 @@
                         android:text="Xem chi tiết"
                         android:textAlignment="center"
                         android:textColor="@color/white"
-                        android:textSize="12sp" />
+                        android:textSize="@dimen/hai" />
                 </LinearLayout>
 
             </LinearLayout>
