--- a/app/src/main/res/layout/activity_main_kiemkho_xema.xml
+++ b/app/src/main/res/layout/activity_main_kiemkho_xema.xml
@@ -41,13 +41,17 @@
             android:layout_margin="5dp"
             android:text="Danh sách sản phẩm"
             android:textAlignment="center"
+            android:textAllCaps="true"
             android:textColor="@color/cam"
-            android:textSize="20dp" />
+            android:textSize="@dimen/hai" />
 
         <ListView
             android:id="@+id/lvXemA"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/list_border"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
     </android.support.v7.widget.LinearLayoutCompat>
 
