--- a/app/src/main/res/layout/activity_main_list_lechkho.xml
+++ b/app/src/main/res/layout/activity_main_list_lechkho.xml
@@ -21,7 +21,7 @@
             android:text="Danh sách lệch kho"
             android:textAlignment="center"
             android:textColor="#fff"
-            android:textSize="18sp" />
+            android:textSize="@dimen/bon" />
 
         <TextView
             android:layout_width="match_parent"
@@ -29,7 +29,7 @@
             android:padding="5dp"
             android:text="Chọn loại danh sách bạn muốn hiển thị"
             android:textAlignment="center"
-            android:textSize="12sp"
+            android:textSize="@dimen/muoi"
             android:textStyle="italic" />
 
         <LinearLayout
@@ -44,14 +44,16 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Giống nhau" />
+                android:text="Giống nhau"
+                android:textSize="@dimen/hai" />
 
             <CheckBox
                 android:id="@+id/cbKhacLechkho"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Lệch nhau" />
+                android:text="Lệch nhau"
+                android:textSize="@dimen/hai" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -67,7 +69,7 @@
                     android:background="@color/cam"
                     android:text="Lọc"
                     android:textColor="#fff"
-                    android:textSize="14sp" />
+                    android:textSize="@dimen/muoi" />
             </LinearLayout>
 
         </LinearLayout>
