--- a/app/src/main/res/layout/activity_main_ma_giam_gia.xml
+++ b/app/src/main/res/layout/activity_main_ma_giam_gia.xml
@@ -10,15 +10,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/cam"
         android:padding="10dp"
-        android:textAlignment="center"
         android:text="Tạo mã giảm giá"
+        android:textAlignment="center"
         android:textColor="#fff"
-        android:textSize="18sp" />
+        android:textSize="@dimen/bon" />
 
     <TextView
         android:layout_width="match_parent"
@@ -27,7 +28,8 @@
         android:paddingRight="20dp"
         android:paddingTop="10dp"
         android:text="Mã này chỉ sử dụng được 1 lần!!!"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textSize="@dimen/muoi" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,7 +50,7 @@
             android:padding="5dp"
             android:textAlignment="center"
             android:textColor="@color/colorAccent"
-            android:textSize="20sp" />
+            android:textSize="@dimen/tam" />
 
     </LinearLayout>
 
@@ -67,7 +69,8 @@
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:text="TẠO MÃ KHUYẾN MÃI"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:textSize="@dimen/btn" />
     </LinearLayout>
 
     <TextView
@@ -87,7 +90,8 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:background="@drawable/bg124"
-        android:text="SỬ DỤNG MÃ NÀY" />
+        android:text="SỬ DỤNG MÃ NÀY"
+        android:textSize="@dimen/bon" />
 </LinearLayout>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabmgg"
