--- a/app/src/main/res/layout/activity_main_taoxuat.xml
+++ b/app/src/main/res/layout/activity_main_taoxuat.xml
@@ -18,20 +18,19 @@
             android:text="Tạo đơn xuất hàng"
             android:textAlignment="center"
             android:textColor="#fff"
-            android:textSize="18sp"
+            android:textSize="@dimen/bon"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="0dp" />
-
-
 
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
-            android:paddingTop="10dp"
             android:paddingRight="10dp"
-            android:text="Nhân viên xuất:" />
+            android:paddingTop="5dp"
+            android:text="Nhân viên xuất:"
+            android:textSize="@dimen/muoi" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -48,8 +47,8 @@
                 android:gravity="center_horizontal">
 
                 <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     app:srcCompat="@drawable/ic_userxuat"
                     tools:ignore="VectorDrawableCompat" />
             </LinearLayout>
@@ -74,7 +73,7 @@
                         android:layout_height="wrap_content"
                         android:text="Mã số: 000000000"
                         android:textColor="#000"
-                        android:textSize="14sp"
+                        android:textSize="@dimen/muoi"
                         android:textStyle="italic" />
 
                 </LinearLayout>
@@ -91,71 +90,31 @@
                         android:layout_weight="1"
                         android:text="Tên nhân viên: Trần thị thanh thuỳ"
                         android:textColor="#000"
-                        android:textSize="14sp"
+                        android:textSize="@dimen/muoi"
                         android:textStyle="italic" />
                 </LinearLayout>
 
             </LinearLayout>
         </LinearLayout>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_margin="10dp"
-            android:background="@color/cam" />
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:orientation="horizontal"
-            android:weightSum="10">
-
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="3"
-                android:gravity="center_horizontal|center">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Chi nhánh Nhận:" />
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_weight="7"
-                android:background="@drawable/bg124"
-                android:gravity="center_vertical"
-                android:orientation="vertical">
-
-                <Spinner
-                    android:id="@+id/spinnerTaoxuat"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/bg124"
-                    android:padding="5dp" />
-
-            </LinearLayout>
-        </LinearLayout>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_margin="10dp"
+            android:layout_marginTop="5dp"
             android:background="@color/cam" />
+
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="5dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:text="Nhân viên nhận:" />
+            android:text="Nhân viên nhận:"
+            android:textSize="@dimen/muoi" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -174,8 +133,8 @@
 
                 <ImageView
                     android:id="@+id/ivDoinv"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     app:srcCompat="@drawable/ic_usernhan"
                     tools:ignore="VectorDrawableCompat" />
             </LinearLayout>
@@ -198,11 +157,55 @@
             </LinearLayout>
 
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:orientation="horizontal"
+            android:weightSum="10">
+
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:gravity="center_horizontal|center">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Chi nhánh Nhận:"
+                    android:textSize="@dimen/muoi" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:layout_weight="7"
+                android:background="@drawable/bg124"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
+
+                <Spinner
+                    android:id="@+id/spinnerTaoxuat"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/bg124"
+                    android:padding="5dp" />
+
+            </LinearLayout>
+        </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_margin="10dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
             android:background="@color/cam" />
 
 
@@ -224,7 +227,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Ghi chú:" />
+                    android:text="Ghi chú:"
+                    android:textSize="@dimen/muoi" />
             </LinearLayout>
 
 
@@ -240,7 +244,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="5dp"
-                    android:textSize="18sp" />
+                    android:textSize="@dimen/sau" />
 
             </LinearLayout>
         </LinearLayout>
@@ -260,7 +264,7 @@
                 android:layout_weight="2"
                 android:gravity="center_vertical"
                 android:text="Quét mã sản phẩm:"
-                android:textSize="16sp" />
+                android:textSize="@dimen/muoi" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -281,7 +285,7 @@
                     android:padding="5dp"
                     android:text="Scan"
                     android:textColor="#fff"
-                    android:textSize="8sp" />
+                    android:textSize="@dimen/btn" />
 
 
             </LinearLayout>
@@ -301,8 +305,8 @@
             android:id="@+id/lvtaoxuat"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10sp"
-            android:layout_marginRight="10sp"
+            android:layout_marginLeft="@dimen/muoi"
+            android:layout_marginRight="@dimen/muoi"
             android:background="@drawable/list_border"
             android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@+id/btnScan"
