--- a/app/src/main/res/layout/activity_main_xuat_nhap.xml
+++ b/app/src/main/res/layout/activity_main_xuat_nhap.xml
@@ -16,7 +16,7 @@
         android:text="Xuất - Nhập hàng hóa"
         android:textAlignment="center"
         android:textColor="#fff"
-        android:textSize="16sp" />
+        android:textSize="@dimen/sau" />
 
     <TableLayout
         android:layout_width="match_parent"
