--- a/app/src/main/res/layout/activity_wellcome.xml
+++ b/app/src/main/res/layout/activity_wellcome.xml
@@ -57,6 +57,7 @@ tools:context="com.example.windows10gamer.connsql.Main">
             android:text="IDEAL | Accessories"
             android:textAlignment="center"
             android:textColor="@color/white"
+            android:textSize="@dimen/hai"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView"
