--- a/app/src/main/res/layout/adapter_ketqua_kiemkho.xml
+++ b/app/src/main/res/layout/adapter_ketqua_kiemkho.xml
@@ -10,12 +10,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="bàn phím" />
+        android:text="bàn phím"
+        android:textSize="@dimen/hai" />
 
     <TextView
         android:id="@+id/tvKQKKsoluong"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="1000" />
+        android:text="1000"
+        android:textSize="@dimen/muoi" />
 </LinearLayout>
