--- a/app/src/main/res/layout/adapter_quatang.xml
+++ b/app/src/main/res/layout/adapter_quatang.xml
@@ -17,7 +17,7 @@
         android:gravity="center_vertical"
         android:padding="5dp"
         android:text="TextView"
-        android:textSize="14sp"
+        android:textSize="@dimen/hai"
         android:textStyle="bold" />
 
 </LinearLayout>
