--- a/app/src/main/res/layout/adapter_report_bh.xml
+++ b/app/src/main/res/layout/adapter_report_bh.xml
@@ -19,7 +19,8 @@
             android:layout_weight="7"
             android:drawableStart="@android:drawable/btn_star_big_on"
             android:gravity="center_vertical"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textSize="@dimen/hai" />
 
         <TextView
             android:id="@+id/adapter_bh_tennv"
@@ -28,6 +29,7 @@
             android:layout_weight="3"
             android:drawableEnd="@drawable/ic_bh"
             android:gravity="center_vertical"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textSize="@dimen/muoi" />
     </LinearLayout>
 </LinearLayout>
