--- a/app/src/main/res/layout/spinner_nv.xml
+++ b/app/src/main/res/layout/spinner_nv.xml
@@ -25,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:text="Mã số: 000000000"
                 android:textColor="#000"
-                android:textSize="14sp"
+                android:textSize="@dimen/muoi"
                 android:textStyle="italic" />
 
         </LinearLayout>
@@ -42,7 +42,7 @@
                 android:layout_weight="1"
                 android:text="Tên nhân viên: Trần thị thanh thuỳ"
                 android:textColor="#000"
-                android:textSize="14sp"
+                android:textSize="@dimen/muoi"
                 android:textStyle="italic" />
         </LinearLayout>
 
