--- a/app/src/main/res/layout/toast.xml
+++ b/app/src/main/res/layout/toast.xml
@@ -21,7 +21,7 @@
         android:layout_gravity="center_vertical"
         android:padding="15dp"
         android:textColor="#fff"
-        android:textSize="18sp"
+        android:textSize="@dimen/hai"
         android:textStyle="bold" />
 
 </LinearLayout>
