--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,11 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="menu_icon">20dp</dimen>
+    <dimen name="btn">8sp</dimen>
+    <dimen name="muoi">10sp</dimen>
+    <dimen name="hai">12sp</dimen>
+    <dimen name="bon">14sp</dimen>
+    <dimen name="sau">16sp</dimen>
+    <dimen name="tam">18sp</dimen>
 
 </resources>
